[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-sdk"
version = "0.1.0"
description = "Python SDK for the Forge rendering engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["forge", "pdf", "rendering", "html", "screenshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Repository = "https://github.com/centrixsystems/forge-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["forge_sdk"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]
